syntax = "proto3";

package uber.yarpc.internal.examples.protobuf.example;

option go_package = "examplepb";

message GetValueRequest {
  string key = 1;
}

message GetValueResponse {
  string value = 2;
}

message SetValueRequest {
  string key = 1;
  string value = 2;
}

message SetValueResponse {}

message EchoOutRequest {
  string message = 1;
}

message EchoOutResponse {
  repeated string all_messages = 2;
}

message EchoInRequest {
  string message = 1;
  int64 num_responses = 2;
}

message EchoInResponse {
  string message = 1;
}

message EchoBothRequest {
  string message = 1;
  int64 num_responses = 2;
}

message EchoBothResponse {
  string message = 1;
}

message Get2ndMessageRequest {
   string message = 1;
}

message Get2ndMessageResponse {
  string message = 1;
}

service KeyValue {
  rpc GetValue(GetValueRequest) returns (GetValueResponse) {}
  rpc SetValue(SetValueRequest) returns (SetValueResponse) {}
}

service Foo {
  rpc EchoOut(stream EchoOutRequest) returns (EchoOutResponse) {}
  rpc EchoIn(EchoInRequest) returns (stream EchoInResponse) {}
  rpc EchoBoth(stream EchoBothRequest) returns (stream EchoBothResponse) {}
}

service TestMessageNameParity {
  rpc MessageName(Get2ndMessageRequest) returns (Get2ndMessageResponse) {}
}
